# django-api

./: db.sqlite3  pyproject.toml
api/: settings.py  urls.py
apps/authentication/: backends.py  models.py  serializers.py  urls.py  views.py
apps/authentication/migrations/: 0001_initial.py
apps/core/: exceptions.py  routers.py
apps/employees/: models.py  urls.py  views.py
apps/employees/migrations/: 0001_initial.py
apps/posts/: models.py  serializers.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_alter_post_options.py
