[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Sebastian <sebastianbila.sw@gmail.com>"]

packages = [
    { include = "api" }
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[tool.poetry.scripts]
cli = 'manage:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
